--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,22 @@ chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+coverage==7.6.10
 cryptography==44.0.0
 cssselect2==0.7.0
 diff-match-patch==20241021
+Django==5.1.5
 django-crispy-forms==2.3
 django-import-export==4.3.4
 frozenlist==1.5.0
+gunicorn==23.0.0
 html5lib==1.1
 humanize==4.11.0
 idna==3.10
 lxml==5.3.0
 multidict==6.1.0
 oscrypto==1.3.0
+packaging==24.2
 pillow==11.1.0
 propcache==0.2.1
 pycparser==2.22
