--- a/requirements.txt
+++ b/requirements.txt
@@ -6,30 +6,46 @@ arabic-reshaper==3.0.0
 asgiref==3.8.1
 asn1crypto==1.5.1
 attrs==25.1.0
+babel==2.17.0
 certifi==2025.1.31
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
-coverage==7.6.10
+crispy-bootstrap4==2024.10
 cryptography==44.0.0
 cssselect2==0.7.0
 diff-match-patch==20241021
-Django==5.1.5
+Django==4.2.20
 django-crispy-forms==2.3
+django-environ==0.12.0
+django-extra-views==0.14.0
+django-haystack==3.3.0
 django-import-export==4.3.4
+django-phonenumber-field==6.4.0
+django-tables2==2.3.4
+django-treebeard==4.7.1
+django-widget-tweaks==1.5.0
+factory-boy==3.2.1
+Faker==36.2.2
 frozenlist==1.5.0
 gunicorn==23.0.0
 html5lib==1.1
 humanize==4.11.0
 idna==3.10
+import-export==0.3.1
 lxml==5.3.0
 multidict==6.1.0
+mysql==0.0.3
+mysql-connector==2.2.9
+mysqlclient==2.2.7
 oscrypto==1.3.0
 packaging==24.2
+phonenumbers==9.0.0
 pillow==11.1.0
 propcache==0.2.1
+purl==1.6
 pycparser==2.22
 pyHanko==0.25.3
 pyhanko-certvalidator==0.26.5
@@ -37,6 +53,7 @@ PyJWT==2.10.1
 pypdf==5.2.0
 pyserial==3.5
 python-bidi==0.6.3
+python-dotenv==1.0.1
 PyYAML==6.0.2
 qrcode==8.0
 reportlab==4.2.5
